# advent-of-code

2023/: README.md  pyproject.toml
2023/day1/: day1.py  day1_part2.py
2023/day10/: day10.py  day10_part2.py
2023/day11/: day11.py  day11_part2.py
2023/day12/: day12.py  day12_part2_UNSOLVED.py
2023/day13/: day13.py  day13_part2.py
2023/day14/: day14.py  day14_part2.py
2023/day15/: day15.py  day15_part2.py
2023/day16/: day16.py  day16_part2.py
2023/day17/: day17_UNSOLVED.py
2023/day18/: day18.py  day18_part2.py
2023/day19/: day19.py  day19_part2.py
2023/day2/: day2.py  day2_part2.py
2023/day20/: day20.py  day20_part2_UNSOLVED.py
2023/day21/: day21.py  day21_part2_UNSOLVED.py
2023/day22/: day22.py  day22_part2.py
2023/day23/: day23.py  day23_part2_UNSOLVED.py
2023/day24/: day24.py  day24_part2_UNSOLVED.py
2023/day25/: day25.py
2023/day3/: day3.py  day3_part2.py
2023/day4/: day4.py  day4_part2.py
2023/day5/: day5.py  day5_part2.py
2023/day6/: day6.py  day6_part2.py
2023/day7/: day7.py  day7_part2.py
2023/day8/: day8.py  day8_part2.py
2023/day9/: day9.py  day9_part2.py
2024/: README.md  pyproject.toml
2024/day01/: day01.py  day01_part2.py
2024/day02/: day02.py  day02_part2.py
2024/day03/: day03.py  day03_part2.py
2024/day04/: day04.py  day04_part2.py
2024/day05/: day05.py  day05_part2.py
2024/day06/: day06.py  day06_part2.py
2024/day07/: day07.py  day07_part2.py
2024/day08/: day08.py  day08_part2.py
2024/day09/: day09.py  day09_part2.py
2024/day10/: day10.py  day10_part2.py
2024/day11/: day11.py  (+1 more)
(+26 files in other folders)
